# github-actions-models

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml  zizmor.yml
src/: action.rs  common.rs  lib.rs  workflow.rs
src/common/: expr.rs
src/dependabot/: mod.rs  v2.rs
src/workflow/: event.rs  job.rs  mod.rs
tests/: test_action.rs  test_dependabot_v2.rs  test_workflow.rs
tests/sample-actions/: gh-action-pip-audit.yml  gh-action-pypi-publish.yml  gh-action-sigstore-python.yml  no-input-output-descriptions.yml  setup-python.yml
tests/sample-dependabot/v2/: pip-audit.yml  sigstore-python.yml
tests/sample-workflows/: adafruit-circuitpython-run-tests.yml  false-condition.yml  gh-action-sigstore-python-selftest.yml  git-annex-built-windows.yaml  guacsec-guac-ci.yml  homebrew-core-automerge-triggers.yml  homebrew-core-dispatch-rebottle.yml  intel-llvm-sycl-linux-run-tests.yml  issue-35.yml  jazzband-tablib-docs-lint.yml  letsencrypt-boulder-boulder-ci.yml  mhils-workflows-python-deploy.yml  openbao-openbao-test-go.yml  pip-api-test.yml  pip-audit-ci.yml  pip-audit-scorecards.yml  pwn-requests.yml  pyca-cryptography-ci.yml  pypi-attestations-release.yml  reusable-workflow-unpinned.yml  rnpgp-rnp-centos-and-fedora.yml  runs-on-expr.yml  runs-on-group-only.yml  scalar-trigger-type.yml  vil02-puzzle_generator-check_examples.yml  zizmor-issue-646.yml  zizmor-issue-650.yml
