[package]
name = "github-actions-models"
authors = ["William Woodruff <william@yossarian.net>"]
description = "Unofficial, high-quality data models for GitHub Actions workflows, actions, and related components"
version = "0.26.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/woodruffw/github-actions-models"
keywords = ["github", "ci"]
categories = ["api-bindings"]

[dependencies]
indexmap = { version = "2.7.0", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.29"

[dev-dependencies]
